# practical-haskell

./: README.md
src/part1/: cabal.project
src/part1/chapter2/: chapter2.cabal
src/part1/chapter2/app/Chapter2/: DataTypes.hs  DefaultValues.hs  SimpleFunctions.hs
src/part1/chapter2/app/Chapter3/: Compr.hs  FnsParams.hs  Lists.hs  Origami.hs  ParamPoly.hs  Ranges.hs
src/part1/chapter2/src/Chapter2/: DefaultValues.hs  SimpleFunctions.hs
src/part1/chapter2/src/Chapter3/: Compr.hs  FnsParams.hs  MoreModules.hs  ParamPoly.hs  Ranges.hs
src/part1/chapter4/: chapter4.cabal
src/part1/chapter4/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/part1/chapter4/dist-newstyle/packagedb/ghc-8.6.5/: chapter4-0.1-inplace.conf  package.cache
src/part1/chapter4/src/Chapter4/: Containers.hs  MinimumPrice.hs  TypeClasses.hs
src/part1/chapter5/: chapter5.cabal  profiling-example.prof
src/part1/chapter5/src/: Main.hs
src/part1/chapter5/src/Chapter5/: Infinite.hs  Problems.hs
src/part1/chapter6/: chapter6.cabal
src/part1/chapter6/src/Chapter6/: KMeans.hs  Lenses.hs
src/time-machine-store/: time-machine-store.cabal
src/time-machine-store/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
src/time-machine-store/src/: Main.hs
