cabal-version:      2.4
name:               chapter2
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             준규
maintainer:         vpark45@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable chapter2
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:
    other-modules:    Chapter2.Section2.Example
                    , Chapter2.DataTypes
                    , Chapter2.DefaultValues
                    , Chapter3.ParamPoly
                    , Chapter3.FnsParams

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.12.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
