cabal-version:      2.4
name:               chapter2
version:            0.1.0.0
author:             준규
maintainer:         vpark45@gmail.com
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Chapter3.ParamPoly
                    , Chapter2.DataTypes
    other-modules:    Chapter2.Section2.Example
                    , Chapter2.DefaultValues
                    , Chapter3.FnsParams
                    , Chapter3.MoreModules
                    , Chapter3.Ranges
                    , Chapter3.Lists
                    , Chapter3.Compr
                    , Chapter3.Origami
    build-depends:    base >= 4.12.0.0
    hs-source-dirs:   src
    default-language: Haskell2010
