name:          chapter4
version:       0.1
cabal-version: >= 1.8
build-type:    Simple

library
  hs-source-dirs: src
  build-depends:  base >= 4
                , containers >= 0.6.0.1 && < 0.7
                , chapter2
  other-modules:  Chapter4.MinimumPrice
                , Chapter4.Containers
                , Chapter4.TypeClasses
