cabal-version:      2.4
name:               chapter6
version:            0.1.0.0
author:             Vincent
maintainer:         vpark45@gmail.com
extra-source-files: CHANGELOG.md

library
  hs-source-dirs:   src
  exposed-modules:  Chapter6.KMeans
  build-depends:    base ^>=4.12.0.0
  default-language: Haskell2010
